# web-bot-auth

./: Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: pullrequest.yml
crates/http-signature-directory/: Cargo.toml  README.md
crates/http-signature-directory/src/: main.rs
crates/web-bot-auth/: Cargo.toml
crates/web-bot-auth/src/: keyring.rs  lib.rs  message_signatures.rs
examples/browser-extension/: package.json
examples/browser-extension/policy/: com.google.Chrome.managed.plist.templ  policy.json.templ
examples/browser-extension/scripts/: build_web_artifacts.mjs
examples/browser-extension/src/: background.ts
examples/caddy-plugin/: handler.go  httpsig.go
examples/rust/: README.md  signing.rs  verify.rs  verify_arbitrary.rs
examples/verification-workers/: package.json  wrangler.jsonc
examples/verification-workers/src/: html.ts  index.ts
examples/verification-workers/test/: index.spec.ts
