[package]
name = "web-bot-auth"
description = "Web Bot Authentication using HTTP Message Signatures"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true


[dependencies]
ed25519-dalek = { workspace = true }
indexmap = { workspace = true }
sfv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
data-url = { workspace = true }